major refactoring
1. merge ac, fts, ms
2. code refactoring
3. tests refactoring