@@ -1,29 +1,22 @@
 package nasirov.yv.ac.service.impl;
 
-import java.util.Collections;
-import java.util.LinkedHashMap;
 import java.util.List;
-import java.util.Map;
-import java.util.Map.Entry;
-import java.util.Set;
 import java.util.function.Function;
-import java.util.stream.Collectors;
 import lombok.RequiredArgsConstructor;
-import nasirov.yv.ac.data.constants.BaseConstants;
+import nasirov.yv.ac.properties.AppProps;
 import nasirov.yv.ac.service.HttpRequestServiceDtoBuilderI;
-import nasirov.yv.ac.util.MalUtils;
-import nasirov.yv.starter.common.constant.FandubSource;
-import nasirov.yv.starter.common.dto.fandub.common.CommonTitle;
-import nasirov.yv.starter.common.dto.fandub_titles_service.FandubTitlesServiceRequestDto;
+import nasirov.yv.ac.service.MalAccessRestorerI;
 import nasirov.yv.starter.common.dto.mal.MalTitle;
 import nasirov.yv.starter.common.dto.mal.MalTitleWatchingStatus;
-import nasirov.yv.starter.common.dto.mal_service.MalServiceResponseDto;
-import nasirov.yv.starter.common.properties.ExternalServicesProperties;
-import nasirov.yv.starter.common.properties.StarterCommonProperties;
 import nasirov.yv.starter.reactive.services.dto.HttpRequestServiceDto;
+import nasirov.yv.starter.reactive.services.exception.RetryableResponseStatusCodeException;
+import org.apache.commons.lang3.StringUtils;
 import org.springframework.core.ParameterizedTypeReference;
-import org.springframework.http.HttpMethod;
+import org.springframework.http.HttpStatus;
+import org.springframework.http.ResponseEntity;
 import org.springframework.stereotype.Service;
+import org.springframework.web.reactive.function.client.ClientResponse;
+import reactor.core.publisher.Mono;
 
 /**
  * @author Nasirov Yuriy
@@ -32,36 +25,52 @@ import org.springframework.stereotype.Service;
 @RequiredArgsConstructor
 public class HttpRequestServiceDtoBuilder implements HttpRequestServiceDtoBuilderI {
 
-	private final StarterCommonProperties starterCommonProperties;
+	private final AppProps appProps;
+
+	private final MalAccessRestorerI malAccessRestorer;
 
 	@Override
-	public HttpRequestServiceDto<MalServiceResponseDto> malService(String username, MalTitleWatchingStatus status) {
-		ExternalServicesProperties externalServicesProperties = starterCommonProperties.getExternalServices();
-		return new HttpRequestServiceDto<>(
-				externalServicesProperties.getMalServiceUrl() + "titles?username=" + username + "&status=" + status.name(),
-				HttpMethod.GET, Collections.emptyMap(), null, Collections.emptySet(),
-				y -> y.bodyToMono(MalServiceResponseDto.class),
-				MalServiceResponseDto.builder()
-						.username(username)
-						.malTitles(Collections.emptyList())
-						.errorMessage(BaseConstants.GENERIC_ERROR_MESSAGE)
-						.build());
+	public HttpRequestServiceDto<ResponseEntity<String>> buildUserProfileDto(String username) {
+		return HttpRequestServiceDto.<ResponseEntity<String>>builder()
+				.url(appProps.getMalProps().getUrl() + "/profile/" + username)
+				.responseHandler(clientResponse -> buildResponseHandler(clientResponse,
+						x -> x.toEntity(new ParameterizedTypeReference<String>() {})))
+				.fallback(ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR).body(StringUtils.EMPTY))
+				.build();
 	}
 
 	@Override
-	public HttpRequestServiceDto<Map<Integer, Map<FandubSource, List<CommonTitle>>>> fandubTitlesService(
-			Set<FandubSource> fandubSources, List<MalTitle> watchingTitles) {
-		Map<Integer, Integer> malIdToEpisode = watchingTitles.stream()
-				.collect(Collectors.toMap(MalTitle::getId, MalUtils::getNextEpisodeForWatch, (o, n) -> o, LinkedHashMap::new));
-		ExternalServicesProperties externalServicesProperties = starterCommonProperties.getExternalServices();
-		return new HttpRequestServiceDto<>(externalServicesProperties.getFandubTitlesServiceUrl() + "titles", HttpMethod.POST,
-				Collections.emptyMap(),
-				FandubTitlesServiceRequestDto.builder().fandubSources(fandubSources).malIdToEpisode(malIdToEpisode).build(),
-				Collections.emptySet(),
-				x -> x.bodyToMono(new ParameterizedTypeReference<Map<Integer, Map<FandubSource, List<CommonTitle>>>>() {}),
-				malIdToEpisode.entrySet()
-						.stream()
-						.collect(Collectors.toMap(Entry::getKey,
-								x -> fandubSources.stream().collect(Collectors.toMap(Function.identity(), y -> Collections.emptyList())))));
+	public HttpRequestServiceDto<ResponseEntity<List<MalTitle>>> buildPartOfTitlesDto(Integer currentOffset, String username,
+			MalTitleWatchingStatus status) {
+		return HttpRequestServiceDto.<ResponseEntity<List<MalTitle>>>builder()
+				.url(appProps.getMalProps().getUrl() + "/animelist/" + username + "/load.json?offset=" + currentOffset + "&status="
+						+ status.getCode())
+				.responseHandler(clientResponse -> buildResponseHandler(clientResponse, this::buildClientResponseFunction))
+				.fallback(ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR).body(List.of()))
+				.build();
+	}
+
+	private Mono<ResponseEntity<List<MalTitle>>> buildClientResponseFunction(ClientResponse clientResponse) {
+		HttpStatus statusCode = clientResponse.statusCode();
+		return clientResponse.toEntityList(MalTitle.class).onErrorReturn(ResponseEntity.status(statusCode).body(List.of()));
+	}
+
+	private <T> Mono<T> buildResponseHandler(ClientResponse clientResponse,
+			Function<ClientResponse, Mono<T>> clientResponseFunction) {
+		Mono<T> result;
+		int rawStatusCode = clientResponse.rawStatusCode();
+		if (HttpStatus.FORBIDDEN.value() == rawStatusCode) {
+			result = malAccessRestorer.restoreMalAccess().flatMap(malAccessRestored -> {
+				if (malAccessRestored) {
+					return clientResponseFunction.apply(clientResponse);
+				} else {
+					return Mono.error(new RetryableResponseStatusCodeException(
+							"Received a response with retryable status code [" + rawStatusCode + "]."));
+				}
+			});
+		} else {
+			result = clientResponseFunction.apply(clientResponse);
+		}
+		return result;
 	}
 }
